UFHT Release v 1.6/src/objects/Ultra_Track_Container__c.object
<CustomObject>
    <fields>
        <fullName>AsynResult_Id__c</fullName>
        <label>AsynResult Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateHolder__c</fullName>
        <label>DateHolder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Good_To_Have__c</fullName>
        <label>Good To Have</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Tracking_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tracking Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Must_Have__c</fullName>
        <label>Must Have</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Records__c</fullName>
        <formula>Must_Have__c  +  Good_To_Have__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OWD_for_an_Object__c</fullName>
        <label>OWD for an Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracked_Fields__c</fullName>
        <label>Tracked Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_Deploy_Error__c</fullName>
        <label>Trigger Deploy Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_Status__c</fullName>
        <label>Trigger Status</label>
        <picklist>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Deployed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ultra Track Container</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Is_Tracking_Enabled__c</columns>
        <columns>OWD_for_an_Object__c</columns>
        <columns>Object_Label__c</columns>
        <columns>Tracked_Fields__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Tracking_Enabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UTC-{00}</displayFormat>
        <label>Ultra Track Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ultra Track Container</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Track_Attachment_Record</fullName>
        <active>true</active>
        <description>Object name with Attachment cannot be tracked.</description>
        <errorConditionFormula>LOWER(Object_Name__c)  = LOWER(&quot;Attachment&quot;)</errorConditionFormula>
        <errorMessage>Cannot track Attachment Object.</errorMessage>
    </validationRules>
</CustomObject>